--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,24 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 400, 700
 */
+body {
+  margin: 30px 0;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+}
+
+/* Stories */
+.stories {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 30px;
+
+  max-width: 290px;
+}
 
 /* Story */
 .story {
@@ -9,8 +27,12 @@
   padding: 20px;
 }
 
+.story:nth-child(even) {
+  background-color: #f29090;
+}
+
 .story-cover {
-  max-width: 100%;
+  width: 100%;
 }
 
 .story-title {
@@ -25,4 +47,33 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 12px;
+}
+
+/* Tablet and up */
+@media (min-width: 768px) {
+  .stories {
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+    max-width: calc(2 * 290px);
+  }
+}
+
+/* Desktop and up */
+@media (min-width: 1440px) {
+  .stories {
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: calc(3 * 350px);
+  }
+
+  .story:nth-child(even) {
+    background: #90c3f2;
+  }
+
+  .story-title {
+    font-size: 21.25px;
+  }
+
+  .story p {
+    font-size: 15px;
+  }
 }
